--- a/style.css
+++ b/style.css
@@ -138,10 +138,11 @@ a {
     gap: 5rem;
 }
 .grid-3 {
-    display: flex;
-    overflow-x: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     scroll-snap-type: x mandatory;
+    overflow-x: auto;
     scrollbar-width: none; /* Hilangkan scrollbar di Firefox */
     -ms-overflow-style: none; /* Hilangkan scrollbar di IE dan Edge */
     scroll-behavior: smooth;
@@ -209,7 +210,7 @@ nav ul li a:hover {
 .burger {
     display: none;
     z-index: 99;
-    position: fixed;
+    position: absolute;
     top: 30px;
     right: 15px;
 }
