--- a/style.css
+++ b/style.css
@@ -42,15 +42,9 @@
     box-sizing: border-box;
 }
 
-html, body {
-  overflow-x: hidden;
-}
-
 body {
     font-family: "Roboto", sans-serif;
     background-color: var(--primaryBackgroundColor);
-max-width: 100%;
-  overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6, strong {
@@ -144,11 +138,10 @@ a {
     gap: 5rem;
 }
 .grid-3 {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    display: flex;
+    overflow-x: auto;
     gap: 20px;
     scroll-snap-type: x mandatory;
-    overflow-x: auto;
     scrollbar-width: none; /* Hilangkan scrollbar di Firefox */
     -ms-overflow-style: none; /* Hilangkan scrollbar di IE dan Edge */
     scroll-behavior: smooth;
@@ -167,15 +160,6 @@ a {
     display: flex;
     justify-content: space-between;
     padding: 2rem 0;
-}
-
-.navbar {
-  width: 100%;
-  overflow: hidden;
-}
-
-.navbar-toggler {
-  margin-left: auto; /* Pastikan menu tetap di sebelah kanan */
 }
 
 .nav ul {
