--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ nav ul li a:hover {
 .burger {
     display: none;
     z-index: 99;
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 15px;
 }
