--- a/style.css
+++ b/style.css
@@ -482,15 +482,17 @@ nav ul li a:hover {
 .skills-list {
     display: flex;
     gap: 2rem; /* Atur jarak antar kolom */
+    grid-template-columns: 1fr 1fr;
     margin-top: 1.5rem;
     justify-content: center;
 }
 
-.skills-right ul {
+.skills-list ul {
     flex: 1; /* Setiap kolom mengambil ruang yang sama */
-    list-style: none;
-    padding: 0;
+    line-height: 2rem;
+    padding: 0 1rem;
     margin: 0;
+}
 
 .skills-list li {
     margin-bottom: 0.5rem;
