--- a/responsive.css
+++ b/responsive.css
@@ -17,11 +17,13 @@
     }
 }
 
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 768px) {
     /* Burger */
     .burger {
         display: block;
         cursor: pointer;
+        top: 15px;
+        right: 10px;
     }
 
     .toggle-burger .line-1 {
